<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/start_exam_drawer_mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.froist_inc.josh.mbtproto.MainActivity"
    tools:showIn="@layout/start_exam_bar_main">

    <Button
        android:text="@string/begin"
        android:id="@+id/start_exam_button"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/instructor"
        android:layout_gravity="center"
        android:gravity="center"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/start_exam_instructor_text_view"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/departments"
        android:layout_gravity="center"
        android:gravity="center"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/start_exam_departments"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/instructions"
        android:layout_gravity="center"
        android:gravity="center"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/start_exam_instruction_text_view"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>
