<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@android:color/white"
    android:layout_centerInParent="true"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/empty"
        android:gravity="center_horizontal|center_vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:gravity="center_horizontal"
            android:padding="10dp"
            android:text="@string/add_repo_explained"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <ImageView
            android:contentDescription="@string/add_repo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/empty_box" />
    </LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <GridView
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:numColumns="auto_fit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/subject_choose_gridView"
            android:gravity="center"
            android:stretchMode="columnWidth"
            android:layout_gravity="center_horizontal|top" />
    </LinearLayout>
    <TableLayout
        android:id="@+id/subject_chooser_layoutMain"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:background="@android:color/white"
        android:clickable="true">
        <TextView
            android:id="@+id/status_report_text_view"
            android:text="@string/index_activity_loading"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:gravity="center"
            android:layout_margin="5dp"
            android:layout_gravity="center_horizontal"
            style="@android:style/TextAppearance.Large" />
        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@android:style/Widget.ProgressBar.Large" />
    </TableLayout>
</FrameLayout>
